# graph-api

./: .gitignore  Cargo.toml  Cross.toml  README.md  clippy.toml  diesel.toml  docker-compose.yml  migrate.sh  package-lock.json  schema.sql
.cargo/: config.toml
.github/workflows/: depoy_api.yaml
functions/: README.md  functions.sql
migrations/2023-01-26-065201_inital/: up.sql
migrations/2023-02-16-043226_unit_types/: up.sql
migrations/2023-02-16-065419_stripe_customer_id/: up.sql
migrations/2023-02-22-051224_enrollments_table/: down.sql  up.sql
migrations/2023-03-06-231618_remove_notion_page_id_column/: up.sql
migrations/2023-03-07-034005_add_order_column_to_units_table/: down.sql  up.sql
migrations/2023-04-18-054453_create_units_progress/: down.sql  up.sql
migrations/2023-04-20-041610_delete_mongo_columns/: down.sql  up.sql
migrations/2023-04-24-031938_create_subscription_expiry_column/: down.sql  up.sql
migrations/2023-04-24-063426_remove_subscription_expiry_column/: down.sql  up.sql
migrations/2023-05-03-090052_add_question_assessments/: down.sql  up.sql
migrations/2023-05-19-073647_remove_stripe_id_column/: down.sql
src/: auth.rs  db_schema.rs  lib.rs  main.rs  misc.rs  mutation.rs  query.rs  schema.rs  tls.rs  variables.rs
src/applications/: mod.rs
src/auth_apps/: mod.rs
src/error/: mod.rs
src/graph/: auth.rs  context.rs  endpoint.rs  misc.rs  mod.rs  models.rs  postgres.rs  resolvers.rs  root.rs  schema.rs
src/graphql/: applications.rs  citizenship_application.rs  mod.rs  mutation.rs  query.rs  question_assessment.rs  unit_progress.rs  user.rs
src/graphql/mutations/: application.rs  base.rs  mod.rs  password_reset.rs  question_assessment.rs  unit_progress.rs  user.rs
src/graphql/queries/: auth_apps.rs  base.rs  mod.rs  question_assessment.rs  unit_progress.rs  user.rs
src/graphql/types/: application.rs  auth_apps.rs  course.rs  mod.rs  organisation.rs  question_assessment.rs  unit_progress.rs  user.rs
src/guards/: auth.rs  mod.rs  scope.rs
src/models/: application.rs  applications.rs  citizenship_application.rs  course.rs  enrollments.rs  flexible_application.rs  mod.rs  post.rs  question_assessment.rs  schema.rs  unit.rs  unit_progress.rs  user.rs
src/models/utils/: jsonb.rs  model.rs
src/schema/: applications.rs  mod.rs  oauth_apps.rs  oauth_grants.rs  password_reset_tokens.rs  prelude.rs  question_assessments.rs  sea_orm_active_enums.rs  unit_progress.rs  users.rs
src/stripe/: mod.rs
src/types/: applications.rs  citizenship_application.rs  mod.rs  question_assessment.rs  schema.rs  unit_progress.rs  user.rs
src/types/utils/: jsonb.rs  mod.rs
src/util/: jsonb.rs  mod.rs  stripe.rs  variables.rs
tests/: auth_apps.rs  citizenship.rs  password_reset.rs  ping.rs  question_assessment.rs  scopes.rs  shared.rs  subscription.rs  unit_completion.rs  user.rs  user_count.rs
tests/shared/: custom_postgres.rs  mod.rs
