[package]
name = "graph-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
juniper = { version = "0.15.10", features = [] }
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0.91"
serde = "1.0.152"
anyhow = "1.0.68"
