[package]
name = "graph-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
# install juniper from master branch for now since UUID 1.0 support was added recently
# migrate this to the crate once it has been supported
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["uuid", "serde_json", "chrono"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0.91"
serde = "1.0.152"
anyhow = "1.0.68"
diesel-async = { version = "0.2.0", features=["postgres", "deadpool"] }
diesel = { version = "2.0.2", features=["serde_json", "uuid", "chrono"] }
chrono =  "0.4.23"
uuid = { version = "1.0", features=["serde", "v4"] }
jsonwebtoken = "8.2.0"
bcrypt = "0.13.0"
# 2.0.0-rc.0 is the latest version that supports diesel 2.0
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
zxcvbn = "2.2.1"
mongodb = "2.3.1"