[package]
name = "graph-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0.91"
serde = "1.0.152"
anyhow = "1.0.68"
chrono =  "0.4.23"
uuid = { version = "1.3.0", features=["serde", "v4"] }
jsonwebtoken = "8.2.0"
bcrypt = "0.14.0"
zxcvbn = "2.2.1"
async-stripe = { version = "0.21.0", features = ["runtime-tokio-hyper-rustls-webpki"] }
openai = {version = "1.0.0-alpha.8", features = ["rustls"], default-features = false }
slug = "0.1.4"
async-graphql = { version = "5.0.7", features = ["uuid", "chrono"] }
sea-orm = { version = "^0", features= [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-uuid",
    "postgres-array",
    "with-json",
    "with-chrono",
]}
lazy_static = "1.4.0"


[dev-dependencies]
testcontainers = "0.14"
